--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,39 +3,36 @@ description: 一个基于flutter的后台管理系统 - A management system base
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: 3.0.7
-  cupertino_icons: ^0.1.2
-  charts_flutter: ^0.8.0
-  flutter_custom_clippers: ^1.1.0
-  cached_network_image: ^2.0.0-rc
-  font_awesome_flutter: ^8.5.0
-  json_annotation: ^2.2.0
-  bot_toast: ^2.2.1
-  flutter_colorpicker: any
+  dio: ^5.0.0
+  cupertino_icons: ^1.0.5
+  community_charts_flutter: ^1.0.0
+  flutter_custom_clippers: ^2.0.0
+  cached_network_image: ^3.2.0
+  font_awesome_flutter: ^10.0.0
+  json_annotation: ^4.8.0
+  bot_toast: ^4.0.0
+  flutter_colorpicker: ^1.0.0
   flutter_localizations:
     sdk: flutter
-  intl_translation: null
-  intl: null
-  url_launcher: ^5.4.1
-  universal_html: ^1.2.2
-  mime_type: ^0.3.1
-  image_picker: ^0.6.7
-  image_picker_for_web: ^0.1.0
-  video_player: ^0.10.5
+  intl: any
+  url_launcher: ^6.1.0
+  universal_html: ^2.2.0
+  mime_type: ^1.0.0
+  image_picker: ^1.0.0
+  image_picker_for_web: ^3.0.0
+  video_player: ^2.6.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  json_model: #latest version
-    null
-  json_serializable: ^2.0.0
-  build_runner: ^1.0.0
+  json_serializable: ^6.6.0
+  build_runner: ^2.3.0
 flutter:
   uses-material-design: true
 flutter_intl:
